--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>live-Fabio</title> 
+    <link rel="stylesheet" href="./assets/style.css"> 
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css' integrity='sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==' crossorigin='anonymous' referrerpolicy='no-referrer' /> 
+</head> 
+<body> 
+     
+    <div id="app"> 
+        <div class="container">
+            <div class="card_main">
+                <img :src="locations[activeImage].image" alt="">
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="./assets/app.js"></script>
-</body>
+                <div class="details">
+                    <h3 class="title">{{locations[activeImage].title}}</h3>
+                    <p>{{locations[activeImage].text}}</p>
+                </div>
+            </div>
+        </div>
+    </div> 
+ 
+ 
+    <script src='https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js'></script> 
+    <script src="./assets/app.js"></script> 
+</body> 
 </html>
