--- a/index.html
+++ b/index.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>live-Fabio</title> 
+    <title>slides</title> 
     <link rel="stylesheet" href="./assets/style.css"> 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css' integrity='sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==' crossorigin='anonymous' referrerpolicy='no-referrer' /> 
 </head> 
 <body> 
      
     <div id="app"> 
+
         <div class="container">
+            <div class="main_box">
+                <img :src="locations[activeImage].image" alt="">
+                <div class="details">
+                    <h3 class="title">{{locations[activeImage].title}}</h3>
+                    <p>{{locations[activeImage].text}}</p>
+                </div>
+            </div>
+
+            <aside class="aside_box">
+
+                <div class="thumb">
+                    <img :src="thumb.image" alt="" v-for="(thumb, index) in locations" :class="activeImage === index ? 'active' : ' ' ">
+                </div>
+
+                <div class="prev" @click="prevImage">prev</div>
+                <div class="next" @click="nextImage">next</div>
+            </aside>
+
+        </div>
+
+        <!-- <div class="container">
+
             <div class="card_main">
                 <img :src="locations[activeImage].image" alt="">
 
@@ -20,6 +43,8 @@
                     <p>{{locations[activeImage].text}}</p>
                 </div>
             </div>
+
+        -->
         </div>
     </div> 
  
